--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,10 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
 }
 
-ol, 
-ul {
-  list-style-type: none;
-}
-
-a { 
-  text-decoration: none;
+h1, p {
+  margin: 0;
+  padding: 10px;
 }
