--- a/src/app/main/styles.css
+++ b/src/app/main/styles.css
@@ -11,15 +11,15 @@
   }
   
   body {
-    background: #eee;
+    background: #fcfafa;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #000;
   }
   
   .swiper {
-    width: 100%;
-    height: 60vh; /* 스와이프 영역의 높이를 60%로 조정 */
+    width: 70%;
+    height: 68vh; /* 스와이프 영역의 높이를 60%로 조정 */
   }
   
   .swiper-slide {
@@ -36,4 +36,78 @@
     height: auto; /* 이미지를 비율에 맞게 표시 */
     object-fit: cover; /* 이미지가 영역을 꽉 채우도록 설정 */
   }
+
+  .slide-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
   
+  .slide-content img {
+    width: 100%;
+    height: auto;
+  }
+
+.search-form {
+  position: absolute;
+  top: 50%; 
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  gap: 10px;
+  z-index: 10; 
+}
+
+.search-input {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.region-select {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 200px; 
+}
+
+.search-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.search-button:hover {
+  background-color: #0056b3;
+}
+.camping-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3개의 항목을 1fr 비율로 수평 배치 */
+  gap: 20px; /* 아이템 간 간격 설정 */
+  padding: 20px;
+}
+
+.camping-item {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.camping-item img {
+  width: 100%; /* 이미지를 카드 크기에 맞게 조정 */
+  height: auto;
+  border-radius: 8px;
+}
+
+
