--- a/src/app/campingdetail/[id]/styles.css
+++ b/src/app/campingdetail/[id]/styles.css
@@ -180,3 +180,49 @@
     display: none;
   }
   
+  /* 글쓰기 버튼 CSS */
+  #events .write-button {
+    background-color: #2d6a4f; /* 다크그린 색 */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  #events .write-button:hover {
+    background-color: #1b4d3a;
+  }
+  
+
+  .write-form {
+    margin-top: 10px; /* 버튼 아래 바로 나타나게 하기 위해 마진 설정 */
+    padding: 20px;
+    background-color: #f4f4f4;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  .write-form textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+  }
+  
+  .submit-button {
+    background-color: #2d6a4f;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .submit-button:hover {
+    background-color: #1b4d3a;
+  }
