--- a/src/app/MeetingGroup/regular-Meeting/detail/[id]/bulletinboard/BulletinBoard.module.css
+++ b/src/app/MeetingGroup/regular-Meeting/detail/[id]/bulletinboard/BulletinBoard.module.css
@@ -1,113 +1,28 @@
 .container {
   padding: 20px;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
-  position: relative;
 }
 
-.title {
-  margin-bottom: 20px;
-  font-weight: bold;
-  font-size: 24px;
-  text-align: center;
-}
-
-.posts {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.postCard {
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  overflow: hidden;
-}
-
-.postHeader {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-}
-
-.postHeader > div {
-  margin-left: 10px;
-}
-
-.postContent {
-  padding: 10px;
-}
-
-.scrollTopButton {
-  position: fixed;
-  bottom: 80px;
-  right: 20px;
-  background-color: #1976d2;
-  color: white;
-  width: 56px;
-  height: 56px;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
-}
-
-.scrollTopButton:hover {
-  background-color: #1565c0;
-}
-
-.addButton {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #4caf50;
-  color: white;
-  width: 56px;
-  height: 56px;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
-}
-
-.addButton:hover {
-  background-color: #388e3c;
-}
-
-.leftMenu {
-  position: fixed;
-  top: 50px;
-  left: 0;
-  width: 200px;
+.detailModalBox {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 800px;
+  max-height: 80vh;
   background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 10px;
-  display: none;
-  flex-direction: column;
-  gap: 10px;
+  border-radius: 8px;
+  overflow-y: auto;
+  padding: 20px;
+  outline: none;
 }
 
-.leftMenu.visible {
+.interaction {
   display: flex;
-}
-
-.menuButton {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  background-color: #4caf50;
-  color: white;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  cursor: pointer;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.menuButton:hover {
-  background-color: #388e3c;
-}
-
-.searchInput {
-  flex-grow: 1;
-  padding: 5px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  gap: 10px;
+  padding: 0 10px;
+  margin-bottom: 10px;
 }
